--- a/GitHubMiner/src/main/resources/application.properties
+++ b/GitHubMiner/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
 server.port=8082
-github.api.token = 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
+github.token = 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
