--- a/BitbucketMiner/src/main/resources/application.properties
+++ b/BitbucketMiner/src/main/resources/application.properties
@@ -3,9 +3,6 @@ server.port=8081
 logging.level.aiss.bitbucketminer.controller=DEBUG
 
 bitbucketminer.baseuri=https://api.bitbucket.org/2.0/repositories/
-bitbucketminer.token=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
-bitbucketminer.ncommits=2
-bitbucketminer.nissues=2
-bitbucketminer.maxpages=1
+github.token=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
 
 
