--- a/BitbucketMiner/src/main/resources/application.properties
+++ b/BitbucketMiner/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.application.name=bitbucketminer
+spring.application.name=BitbucketApplication
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=alfonso
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= update
+spring.h2.console.enabled=true
+# default path: h2-console
+spring.h2.console.path=/h2-ui
 server.port=8081
-logging.level.aiss.bitbucketminer.controller=DEBUG
-
-bitbucketminer.baseuri=https://api.bitbucket.org/2.0/repositories/
-github.token=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
-
-
+github.token = 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
