--- a/BitbucketMiner/src/main/resources/application.properties
+++ b/BitbucketMiner/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
 server.port=8081
+bitbucket.username=solvillegacharlo
 bitbucket.token = ATBBvdCaaaHnjDfuKzpstDFteRkh2A0AE910
